# information-retrieval

./: .gitignore  .gitmodules  algorithm.hpp  header.hpp
lw_2/: Makefile  test.old.py  test.py
search_engine/: CMakeList.txt  CMakeLists.txt  Makefile  main.cpp
search_engine/include/: header.hpp
search_engine/include/search_engine/: algorithm.hpp  char_encoder.hpp  common.hpp  convert.hpp  encoder.hpp  header.hpp  index.hpp  indexer.hpp  json_parser.hpp  memmap.hpp  memory.hpp  normalizer.hpp  set.hpp  stemmer.hpp  str_encoder.hpp  str_parser.hpp  tokenizator.hpp  tokenizer.hpp  types.hpp
search_engine/src/: CMakeLists.txt  Makefile  index.cpp  index_ctor.cpp  indexer.cpp  main.cpp  main.cpp.cpp  memmap.cpp  normalizer.cpp  stemmer.cpp  tokenizator.cpp  tokenizer.cpp
search_engine/test/: CMakeLists.txt  Makefile  abc.test.cpp  char_encoder.test.cpp  encoder.test.cpp  index.test.cpp  index_ctor.test.cpp  main.test.cpp  memmap.test.cpp  normalizer.test.cpp  pangram.txt  stemmer.test.cpp  str_encoder.test.cpp  str_parser.test.cpp  tokenizator.test.cpp  tokenizer.test.cpp
webcrawler/: cat.sh  requirements.txt  split.sh  stat.json  texts.json.md5  texts.json.sha1  texts.py  titles.py  webcrawler.py
